fixed overflow

--- a/css/add_task.css
+++ b/css/add_task.css
@@ -4,7 +4,6 @@
   left: 355px;
   bottom: 183px;
   right: 123px;
-  overflow: unset;
 }
 
 .add-title-container {
